# luigi_3P9D

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.mjs  build.sh  luigi.cmd  luigi.js  luigi.mjs  luigi.sh  package-lock.json  package.json
dev/: CMakeLists.txt  package-lock.json  package.json
examples/: mandelbrot.luigi  mighty.luigi  screensaver.luigi  test.luigi  test2.luigi
examples/words/: words.luigi
ffi/: CMakeLists.txt  ffi.gyp  package-lock.json  package.json
ffi/src/: call.cc  call_x64.cc  call_x64_sysv.asm  call_x64_win32.asm  ffi.cc  ffi.hh  libcc.cc
jscmk/: jscmk.js  package.json
koffi/: package.json
koffi/doc/: contribute.md  functions.md  types.md
koffi/src/: abi_arm32.cc  abi_arm64.cc  abi_arm64_fwd.S  abi_riscv64.cc  abi_x64_sysv.cc  abi_x64_win.cc  abi_x64_win_fwd.asm  abi_x86.cc  call.cc  ffi.cc  ffi.hh  parser.cc
koffi/test/: misc.c  sync.js
lib/: index.js  index.mjs  lexer.mjs  lu_vm.js  luigi.mjs  parser.mjs  runner.mjs  std.mjs  std_raylib.js  types.mjs  vm.mjs
lib/enums/: opcodes.mjs  tokens.mjs
lib/std/: basic.mjs  graphics.mjs
luiggi/: .gitignore  CMakeLists.txt  README.md  luiggi.js  package.json
luiggi/doc/: conf.py  contribute.md  index.rst  pyproject.toml  start.md
luiggi/examples/words/: words.luiggi
luiggi/src/: build.js  en_opcodes.js  index.js  lexer.js  lu_vm.js  luiggi.js  parser.js  std_basic.js  std_raylib.js  types.js  vm.js
luiggi/src/std/: basic.js  raylib.js
luiggi/src/syntax/: Luiggi.sublime-syntax
luigi/: CMakeLists.txt  README.md  package-lock.json  package.json
luigi/examples/: test.luigi
luigi/examples/words/: words.luigi
luigi/src/: build.js  lu_lexer.js  luigi.js  std_raylib.js
shared/: cmake.js
src/: library.mjs  parser.mjs  runner.mjs  scanner.mjs
src/ffi/: call.cc  call.hh  call_arm64.cc  call_arm64_fwd.S  call_x64.cc  call_x64_fwd.asm  call_x64_sysv.S  call_x64_sysv.asm  call_x64_sysv.cc  call_x64_sysv_fwd.S  call_x64_win.cc  call_x64_win32.asm  call_x86.cc  call_x86_fwd.S  ffi.cc  ffi.gyp  ffi.hh  util.hh
src/koffi/: call.cc  call_arm64.cc  call_x64_sysv.cc  call_x64_win.cc  call_x86.cc  ffi.cc  ffi.hh  util.cc  util.hh
src/kofi/: call_x64_sysv.cc  ffi.cc
src/luigi/: build.js  en_opcodes.js  en_tokens.js  index.js  lu_lexer.js  lu_parser.js  std_raylib.js
src/luigi/web/: luigi.html
syntax/: Luigi.sublime-syntax
